# vectorizer.ai

./: .gitignore  pyproject.toml
vectorizer/: __init__.py  __main__.py  vectorizer.py
